styles.css
body {
    padding: 0;
    margin: 0;
    font-size: 22px;
    font-family: 'Roboto', sans-serif;
    background-image: url(./assets/plane-background.jpg);
    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);
    background-repeat:no-repeat;
    background-size:cover;
    height: 100vh;
}

.title {
    color: #f5f5f5;
    font-size: 2em;
    font-weight: 700;
    padding: 35px;
    text-align: center;

}

.p1 {
    line-height: 1.5;
    margin: 0;
}

.main {
    margin-top: 5%;
    color: #f5f5f5;
    text-align: center;
}

